Fixed thumbnail aspect ratio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@ layout: home
         "<a target='_blank' href='" +
         row.link +
         "'>" +
-        "<img src='" +
+        "<img width='1280px' height='720px' src='" +
         row.thumbnail_url +
         "' class='thumbnail'/>" +
         "<div class='card-title'>" +
